// PostgreSQL 스키마 — ER 확인용 (https://dbdiagram.io)
// db_table.sql 및 Alembic 적용 결과와 동기화한다. 스키마 변경 PR에서 함께 수정한다.

Enum project_role {
  owner
  reviewer
  annotator
}

Enum project_invitation_role {
  annotator
  reviewer
}

Enum invitation_status {
  pending
  accepted
  expired
  cancelled
}

Enum upload_type {
  image_zip
  video
}

Enum upload_status {
  pending
  processing
  completed
  failed
}

Enum assignment_status {
  assigned
  in_progress
  submitted
  review_assigned
  approved
  reverted
  rejected
}

Enum annotation_source {
  auto
  manual
}

Enum export_status {
  pending
  processing
  completed
  failed
}

Enum oauth_provider {
  google
  naver
  kakao
}

Table users {
  id bigint [pk, increment]
  email text [not null, unique]
  password_hash text [note: 'OAuth-only users leave NULL']
  created_at timestamp [not null, default: `now()`]
}

Table oauth_identities {
  id bigint [pk, increment]
  user_id bigint [not null, note: 'FK users']
  provider oauth_provider [not null]
  provider_subject text [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (provider, provider_subject) [unique, name: 'uq_oauth_provider_subject']
    user_id [name: 'idx_oauth_identities_user_id']
  }
}

Table ml_models {
  id bigint [pk, increment]
  owner_id bigint [not null, note: 'FK users']
  name text [not null]
  version text
  framework text [not null]
  file_path text [not null]
  created_at timestamp [not null, default: `now()`]
}

Table model_classes {
  id bigint [pk, increment]
  model_id bigint [not null, note: 'FK ml_models ON DELETE CASCADE']
  class_index int [not null]
  name text [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (model_id, class_index) [unique, name: 'uq_model_class_index']
  }
}

Table projects {
  id bigint [pk, increment]
  name text [not null]
  description text
  created_by bigint [not null, note: 'FK users']
  selected_model_id bigint [note: 'FK ml_models']
  created_at timestamp [not null, default: `now()`]
}

Table project_users {
  id bigint [pk, increment]
  project_id bigint [not null, note: 'FK projects ON DELETE CASCADE']
  user_id bigint [not null, note: 'FK users']
  role project_role [not null]
  invited_by bigint [not null, note: 'FK users']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (project_id, user_id) [unique, name: 'uq_project_user']
    project_id [name: 'idx_project_users_project']
    user_id [name: 'idx_project_users_user']
  }
}

Table project_invitations {
  id bigint [pk, increment]
  project_id bigint [not null, note: 'FK projects ON DELETE CASCADE']
  role project_invitation_role [not null]
  token_hash text [not null]
  status invitation_status [not null]
  invited_by bigint [not null, note: 'FK users']
  accepted_by bigint [note: 'FK users ON DELETE SET NULL']
  accepted_at timestamp
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    token_hash [unique, name: 'uq_project_invitations_token_hash']
    (project_id, status) [name: 'idx_project_invitations_project_status']
  }

  Note: 'CHECK expires_at > created_at'
}

Table project_classes {
  id bigint [pk, increment]
  project_id bigint [not null, note: 'FK projects ON DELETE CASCADE']
  model_class_id bigint [note: 'FK model_classes']
  export_index int [not null]
  name text [not null]
  color text
  is_active boolean [not null, default: true]
  created_by bigint [not null, note: 'FK users']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (project_id, export_index) [unique, name: 'uq_project_export_index']
    (project_id, name) [unique, name: 'uq_project_class_name']
  }
}

Table upload_jobs {
  id bigint [pk, increment]
  project_id bigint [not null, note: 'FK projects ON DELETE CASCADE']
  uploaded_by bigint [not null, note: 'FK users']
  upload_type upload_type [not null]
  status upload_status [not null]
  original_file_name text [not null]
  original_file_path text [not null]
  options jsonb
  progress int
  processed_count int
  total_count int
  error_message text
  created_at timestamp [not null, default: `now()`]
  completed_at timestamp
}

Table source_videos {
  id bigint [pk, increment]
  project_id bigint [not null, note: 'FK projects ON DELETE CASCADE']
  upload_job_id bigint [not null, note: 'FK upload_jobs ON DELETE CASCADE']
  original_name text [not null]
  file_path text [not null]
  duration_sec float
  fps float
  width int
  height int
  created_at timestamp [not null, default: `now()`]
}

Table images {
  id bigint [pk, increment]
  project_id bigint [not null, note: 'FK projects ON DELETE CASCADE']
  upload_job_id bigint [not null, note: 'FK upload_jobs ON DELETE CASCADE']
  source_video_id bigint [note: 'FK source_videos']
  file_name text [not null]
  file_path text [not null]
  width int [not null]
  height int [not null]
  frame_index int
  timestamp_sec float
  created_at timestamp [not null, default: `now()`]

  indexes {
    project_id [name: 'idx_images_project']
  }
}

Table image_assignments {
  id bigint [pk, increment]
  image_id bigint [not null, note: 'FK images ON DELETE CASCADE']
  assigned_to bigint [not null, note: 'FK users']
  assigned_by bigint [not null, note: 'FK users']
  reviewer_id bigint [note: 'FK users']
  status assignment_status [not null]
  approved_by bigint [note: 'FK users']
  approved_at timestamp
  reverted_by bigint [note: 'FK users']
  reverted_at timestamp
  revert_reason text
  submitted_at timestamp
  reviewed_at timestamp
  created_at timestamp [not null, default: `now()`]

  indexes {
    image_id [unique, name: 'uq_image_assignment']
    status [name: 'idx_assignment_status']
  }
}

Table annotations {
  id bigint [pk, increment]
  assignment_id bigint [not null, note: 'FK image_assignments ON DELETE CASCADE']
  image_id bigint [not null, note: 'FK images ON DELETE CASCADE']
  class_id bigint [not null, note: 'FK project_classes']
  x float [not null, note: 'chk_bbox_coordinate']
  y float [not null]
  width float [not null]
  height float [not null]
  confidence float
  source annotation_source [not null]
  created_by bigint [not null, note: 'FK users']
  updated_by bigint [note: 'FK users']
  is_deleted boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    image_id [name: 'idx_annotations_image']
    assignment_id [name: 'idx_annotations_assignment']
    class_id [name: 'idx_annotations_class']
  }

  Note: 'CHECK: x,y,width,height in (0,1]; width,height > 0'
}

Table submission_comments {
  id bigint [pk, increment]
  assignment_id bigint [not null, note: 'FK image_assignments ON DELETE CASCADE']
  reviewer_id bigint [not null, note: 'FK users']
  action text [not null]
  comment text
  created_at timestamp [not null, default: `now()`]
}

Table dataset_versions {
  id bigint [pk, increment]
  project_id bigint [not null, note: 'FK projects ON DELETE CASCADE']
  name text [not null]
  description text
  created_by bigint [not null, note: 'FK users']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (project_id, name) [unique, name: 'uq_dataset_version']
  }
}

Table dataset_items {
  id bigint [pk, increment]
  dataset_version_id bigint [not null, note: 'FK dataset_versions ON DELETE CASCADE']
  image_id bigint [not null, note: 'FK images']
  assignment_id bigint [not null, note: 'FK image_assignments']
  created_at timestamp [not null, default: `now()`]

  indexes {
    dataset_version_id [name: 'idx_dataset_items_version']
    (dataset_version_id, image_id) [unique, name: 'uq_dataset_item_version_image']
  }
}

Table dataset_splits {
  id bigint [pk, increment]
  dataset_version_id bigint [not null, note: 'FK dataset_versions ON DELETE CASCADE']
  name text [not null]
  train_ratio float [not null, note: 'chk_split_ratio: sum ratios = 100']
  val_ratio float [not null]
  test_ratio float [not null]
  random_seed int [not null, default: 0]
  created_by bigint [not null, note: 'FK users']
  created_at timestamp [not null, default: `now()`]

  Note: 'CHECK train_ratio + val_ratio + test_ratio = 100'
}

Table split_items {
  id bigint [pk, increment]
  split_id bigint [not null, note: 'FK dataset_splits ON DELETE CASCADE']
  dataset_item_id bigint [not null, note: 'FK dataset_items']
  split_type text [not null, note: 'train | val | test']
  created_at timestamp [not null, default: `now()`]

  indexes {
    split_id [name: 'idx_split_items_split']
    (split_id, dataset_item_id) [unique, name: 'uq_split_item_per_dataset_item']
  }
}

Table export_jobs {
  id bigint [pk, increment]
  project_id bigint [not null, note: 'FK projects ON DELETE CASCADE']
  dataset_version_id bigint [not null, note: 'FK dataset_versions']
  split_id bigint [not null, note: 'FK dataset_splits']
  requested_by bigint [not null, note: 'FK users']
  status export_status [not null]
  export_format text [not null, default: 'yolo', note: 'yolo | coco']
  export_path text
  error_message text
  created_at timestamp [not null, default: `now()`]
  completed_at timestamp

  indexes {
    project_id [name: 'idx_export_jobs_project']
    status [name: 'idx_export_jobs_status']
  }
}

Ref: oauth_identities.user_id > users.id
Ref: ml_models.owner_id > users.id
Ref: model_classes.model_id > ml_models.id [delete: cascade]

Ref: projects.created_by > users.id
Ref: projects.selected_model_id > ml_models.id

Ref: project_users.project_id > projects.id [delete: cascade]
Ref: project_users.user_id > users.id
Ref: project_users.invited_by > users.id

Ref: project_invitations.project_id > projects.id [delete: cascade]
Ref: project_invitations.invited_by > users.id
Ref: project_invitations.accepted_by > users.id

Ref: project_classes.project_id > projects.id [delete: cascade]
Ref: project_classes.model_class_id > model_classes.id
Ref: project_classes.created_by > users.id

Ref: upload_jobs.project_id > projects.id [delete: cascade]
Ref: upload_jobs.uploaded_by > users.id

Ref: source_videos.project_id > projects.id [delete: cascade]
Ref: source_videos.upload_job_id > upload_jobs.id [delete: cascade]

Ref: images.project_id > projects.id [delete: cascade]
Ref: images.upload_job_id > upload_jobs.id [delete: cascade]
Ref: images.source_video_id > source_videos.id

Ref: image_assignments.image_id > images.id [delete: cascade]
Ref: image_assignments.assigned_to > users.id
Ref: image_assignments.assigned_by > users.id
Ref: image_assignments.reviewer_id > users.id
Ref: image_assignments.approved_by > users.id
Ref: image_assignments.reverted_by > users.id

Ref: annotations.assignment_id > image_assignments.id [delete: cascade]
Ref: annotations.image_id > images.id [delete: cascade]
Ref: annotations.class_id > project_classes.id
Ref: annotations.created_by > users.id
Ref: annotations.updated_by > users.id

Ref: submission_comments.assignment_id > image_assignments.id [delete: cascade]
Ref: submission_comments.reviewer_id > users.id

Ref: dataset_versions.project_id > projects.id [delete: cascade]
Ref: dataset_versions.created_by > users.id

Ref: dataset_items.dataset_version_id > dataset_versions.id [delete: cascade]
Ref: dataset_items.image_id > images.id
Ref: dataset_items.assignment_id > image_assignments.id

Ref: dataset_splits.dataset_version_id > dataset_versions.id [delete: cascade]
Ref: dataset_splits.created_by > users.id

Ref: split_items.split_id > dataset_splits.id [delete: cascade]
Ref: split_items.dataset_item_id > dataset_items.id

Ref: export_jobs.project_id > projects.id [delete: cascade]
Ref: export_jobs.dataset_version_id > dataset_versions.id
Ref: export_jobs.split_id > dataset_splits.id
Ref: export_jobs.requested_by > users.id
